hep.yaml

apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: hep-ds
  labels:
spec:
  selector:
    matchLabels:
      name: hep-ds
  template:
    metadata:
      labels:
        name: hep-ds
    spec:
      serviceAccountName: hep-sa
      containers:
      - image: randhirkumars/hepinstall:v1
        imagePullPolicy: Always
        name: hep-install
        securityContext:
          runAsUser: 1337
